--- a/src/components/ui/NavigationBar.astro
+++ b/src/components/ui/NavigationBar.astro
@@ -28,31 +28,18 @@ const { type = 'sticky' } = Astro.props
 // - Data
 import { getNavigationBarData } from '../../config/navigationBar'
 const navigationBarData = await getNavigationBarData()
-const { logo, navItems, navActions } = navigationBarData
+const { navItems } = navigationBarData
 
 // - Determine current path
 const path = new URL(Astro.request.url).pathname
 function isActivePath(currentPath: string): boolean {
 	return path === currentPath || path === `${currentPath}/`
 }
-
-// - Type assertion for navActions to ensure type safety
-const savedNavActions = navActions.map((action: any) => ({
-	...action,
-	size: action.size as 'base' | 'lg' | 'sm',
-	style: action.style as 'primary' | 'secondary' | 'neutral'
-}))
 ---
 
 <header class:list={['header', { [`header--${type}`]: type }]}>
 	<div class="header__container">
 		<nav aria-label="main navigation" role="navigation" class="header__nav">
-			{/* Logo */}
-			<a href={`/`} class="header__logo">
-				<img src={logo.src} alt={logo.alt} width="48" height="48" />
-				<span>{logo.text}</span>
-			</a>
-
 			{/* Menu toggle */}
 			<button
 				id="header-toggle"
@@ -147,24 +134,6 @@ const savedNavActions = navActions.map((action: any) => ({
 				}
 			</ul>
 
-			{/* Navigation action buttons */}
-			<div class="header__actions">
-				{
-					savedNavActions.map((action) => (
-						<Button
-							classes="flex-auto"
-							link={action.link}
-							size={action.size}
-							style={action.style}
-							modal={action.modal}
-							variation={action.variation}
-						>
-							{action.name}
-						</Button>
-					))
-				}
-			</div>
-
 			{/* Theme Switcher */}
 			<Switcher />
 		</nav>
@@ -173,11 +142,11 @@ const savedNavActions = navActions.map((action: any) => ({
 
 <style>
 	.header {
-		@apply sticky top-0 z-20 w-full animate-fadeInShadowLight [animation-range:0%_20rem] [animation-timeline:scroll()] before:absolute after:absolute after:left-0 after:top-full after:z-10 after:block after:h-px after:w-full lg:after:hidden dark:animate-fadeInShadowDark dark:[animation-range:0%_20rem] dark:[animation-timeline:scroll()];
+		@apply sticky top-0 z-20 w-full before:absolute after:absolute after:left-0 after:top-full after:z-10 after:block after:h-px after:w-full lg:after:hidden;
 	}
-	.header:before {
+	/* .header:before {
 		@apply block h-full w-full bg-white/90 lg:backdrop-blur-sm dark:bg-neutral-900/90;
-	}
+	} */
 	.header--transparent {
 		@apply fixed;
 	}
@@ -194,7 +163,7 @@ const savedNavActions = navActions.map((action: any) => ({
 		@apply flex h-[5.5rem] items-stretch gap-6 font-medium text-neutral-700 lg:justify-between dark:text-neutral-50;
 	}
 	.header__menu {
-		@apply invisible absolute left-0 top-0 z-[-1] ml-auto h-dvh w-full justify-center overflow-hidden overflow-y-auto overscroll-contain bg-white/90 px-8 py-[6rem] font-medium opacity-0 transition-[opacity,visibility] duration-300 lg:visible lg:relative lg:top-0 lg:z-0 lg:flex lg:h-full lg:w-auto lg:items-stretch lg:overflow-visible lg:bg-white/0 lg:px-0 lg:py-0 lg:pt-0 lg:opacity-100 dark:bg-neutral-900/90 dark:lg:bg-transparent;
+		@apply invisible absolute left-0 top-0 z-[-1] ml-auto h-dvh w-full justify-center overflow-hidden overflow-y-auto overscroll-contain bg-white/90 px-8 py-[6rem] font-medium opacity-0 transition-[opacity,visibility] duration-300 lg:relative lg:top-0 lg:z-0 lg:flex lg:h-full lg:w-auto lg:items-stretch lg:overflow-visible lg:bg-white/0 lg:px-0 lg:py-0 lg:pt-0 lg:opacity-100 dark:bg-neutral-900/90 dark:lg:bg-transparent;
 	}
 	.header__menu--open {
 		@apply visible opacity-100 backdrop-blur-sm;
@@ -233,7 +202,7 @@ const savedNavActions = navActions.map((action: any) => ({
 		@apply px-6 py-3 text-neutral-500 hover:text-primary-500 dark:text-neutral-300 [&.active]:text-primary-500 [.header\_\_menu-item.open_&]:flex [.header\_\_submenu-item:has(svg)_&]:pl-12;
 	}
 	.header__toggle {
-		@apply relative order-10 block h-10 w-10 self-center lg:hidden [&--open]:visible [&--open]:opacity-100;
+		@apply relative order-10 block h-10 w-10 self-center [&--open]:visible [&--open]:opacity-100;
 	}
 	.header__toggle-inner {
 		@apply absolute left-1/2 top-1/2 w-6 -translate-x-1/2 -translate-y-1/2 transform;
