--- a/src/components/ui/Accordion.astro
+++ b/src/components/ui/Accordion.astro
@@ -21,8 +21,8 @@ type Props = {
 	classes?: string
 }
 const {
-	title = 'Astro Starter. Tailwind CSS Astro Starter Kit by Oxygenna',
-	text = 'Astro Starter is a design and development agency that specializes in creating beautiful and functional websites.',
+	title = 'Milo. Tailwind CSS Milo Kit by Oxygenna',
+	text = 'Milo is a design and development agency that specializes in creating beautiful and functional websites.',
 	open = false,
 	classes
 } = Astro.props
