--- a/src/components/ui/Pagination.astro
+++ b/src/components/ui/Pagination.astro
@@ -11,7 +11,6 @@
 // - length: The number of pages
 // - size: The number of items per page
 // - total: The total number of items
-// - collection: The name of the collection (blog or eguides)
 // Reference: https://wind-ui.com/components/pagination/
 
 // Components
@@ -29,9 +28,8 @@ type Props = {
 	length: number
 	size: number
 	total: number
-	collection?: string
 }
-const { first, prev, next, last, current, length, size, total, collection = 'blog' } = Astro.props
+const { first, prev, next, last, current, length, size, total } = Astro.props
 ---
 
 <nav class="pagination" role="navigation" aria-label="Pagination Navigation">
@@ -61,7 +59,7 @@ const { first, prev, next, last, current, length, size, total, collection = 'blo
 		{
 			Array.from({ length: length }).map((_, index) => {
 				const pageNumber = index + 1
-				const pageUrl = pageNumber === 1 ? `/${collection}` : `/${collection}/${pageNumber}`
+				const pageUrl = pageNumber === 1 ? `/case-studies` : `/case-studies/${pageNumber}`
 
 				return (
 					<li>
@@ -102,12 +100,12 @@ const { first, prev, next, last, current, length, size, total, collection = 'blo
 		@apply flex list-none items-center justify-center text-sm text-neutral-700 md:gap-1 dark:text-neutral-50;
 	}
 	.pagination__nav-arrows {
-		@apply inline-flex h-10 items-center justify-center gap-4 rounded stroke-neutral-700 px-4 text-sm font-medium text-neutral-700 transition duration-300 hover:bg-primary-50 hover:stroke-primary-500 hover:text-primary-500 focus:bg-primary-50 focus:stroke-primary-600 focus:text-primary-600 focus-visible:outline-none dark:text-neutral-50 dark:hover:bg-primary-400/15 dark:hover:text-primary-600;
+		@apply inline-flex h-10 items-center justify-center gap-4 stroke-neutral-700 px-4 text-sm font-medium text-neutral-700 transition duration-300 hover:bg-primary-50 hover:stroke-primary-500 hover:text-primary-500 focus:bg-primary-50 focus:stroke-primary-600 focus:text-primary-600 focus-visible:outline-none dark:text-neutral-50 dark:hover:bg-primary-400/15 dark:hover:text-primary-600;
 	}
 	.pagination__item-link {
-		@apply hidden h-10 items-center justify-center gap-4 rounded stroke-neutral-700 px-4 text-sm font-medium text-neutral-700 transition duration-300 hover:bg-primary-50 hover:stroke-primary-500 hover:text-primary-500 focus:bg-primary-50 focus:stroke-primary-600 focus:text-primary-600 focus-visible:outline-none md:inline-flex dark:text-neutral-50 dark:hover:bg-primary-400/15 dark:hover:text-primary-600;
+		@apply hidden h-10 items-center justify-center gap-4 stroke-neutral-700 px-4 text-sm font-medium text-neutral-700 transition duration-300 hover:bg-primary-50 hover:stroke-primary-500 hover:text-primary-500 focus:bg-primary-50 focus:stroke-primary-600 focus:text-primary-600 focus-visible:outline-none md:inline-flex dark:text-neutral-50 dark:hover:bg-primary-400/15 dark:hover:text-primary-600;
 	}
 	.pagination__item-link--active {
-		@apply bg-primary-600 text-primary-50 hover:bg-primary-700 hover:stroke-primary-500 hover:text-primary-50 focus:bg-primary-800 focus:text-primary-50;
+		@apply border-b border-primary-600 text-purple-500 hover:border-primary-700 hover:stroke-primary-500 hover:text-primary-600 focus:border-primary-800 focus:text-primary-700;
 	}
 </style>
