--- a/src/components/ui/Testimonial.astro
+++ b/src/components/ui/Testimonial.astro
@@ -97,7 +97,7 @@ const {
 		@apply text-center [&_.testimonial\_\_figcaption]:justify-center;
 	}
 	.testimonial--quote {
-		@apply absolute -left-4 -top-8 z-0 text-primary-400;
+		@apply absolute left-0 top-0 z-0 text-primary-400;
 	}
 	.testimonial__container {
 		@apply relative px-20;
