--- a/src/components/ui/Testimonial.astro
+++ b/src/components/ui/Testimonial.astro
@@ -97,16 +97,16 @@ const {
 		@apply text-center [&_.testimonial\_\_figcaption]:justify-center;
 	}
 	.testimonial--quote {
-		@apply absolute left-0 top-0 z-0 text-primary-400;
+		@apply absolute -top-1 left-0 z-0 size-8 text-primary-400 md:top-0 md:size-12;
 	}
 	.testimonial__container {
-		@apply relative px-20;
+		@apply relative px-6 pt-6 md:px-20 md:pt-0;
 	}
 	.testimonial__figure {
 		@apply relative z-10;
 	}
 	.testimonial__blockquote {
-		@apply pb-6 font-headings text-3xl leading-[3.75rem] [&>p]:text-neutral-500 dark:[&>p]:text-neutral-300 [.light_&>p]:text-neutral-500;
+		@apply pb-6 font-headings text-xl leading-9 md:text-3xl md:leading-[3.75rem] [&>p]:text-neutral-500 dark:[&>p]:text-neutral-300 [.light_&>p]:text-neutral-500;
 	}
 	.testimonial__figcaption {
 		@apply flex flex-col gap-4 text-sm leading-normal text-neutral-700 dark:text-neutral-50 [.light_&]:text-neutral-700;
