--- a/src/components/ui/Section.astro
+++ b/src/components/ui/Section.astro
@@ -6,7 +6,7 @@
 // - Id: the id of the section
 // - FullWidth: whether the section is will expand to full width or not
 // - StickyCol: specifies wether the section can contain a sticky column or not
-// - Mode:  use that to overide the light/dark mode for a specific section. Usefull if you have a section that might contain a dark background
+// - Mode:  use that to override the light/dark mode for a specific section. Useful if you have a section that might contain a dark background
 // - Padding: by default each section has a vertical padding. The padding property defines where the padding is applied (top, bottom, both, none), default is both
 // - Bg: the background image of the section
 // - BgPosition: the position of the background (center, top, bottom)
