--- a/src/components/ui/Feeds/ExperienceFeed.astro
+++ b/src/components/ui/Feeds/ExperienceFeed.astro
@@ -3,7 +3,7 @@
 // ------------
 // Description: the feed component is a ui element that displays a stream of content (static or dynamic), such as comments, activity updates, posts, in a chronological order.
 // Properties:
-// - Data: the data of the feed (consists of title, date, text, and image)
+// - Data: the data of the feed
 // - classes: additional classes
 // Reference: https://wind-ui.com/components/feeds/
 
