Updated Layout component

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 // Layout
 // ------------
-// Description: The layout for the page with header and footer
+// Description: The layout for the page with header
 // Properties:
 // - title: The title of the page
 // - description: The description of the page
@@ -30,18 +30,10 @@ type Props = {
 	description?: string
 	ogImage?: string
 	noindex?: boolean
-	navigation?: 'none' | 'transparent' | 'sticky'
-	footer?: 'none' | 'basic'
+	navigation?: 'none' | 'sticky'
 }
 // Page Metadata
-const {
-	title,
-	description,
-	ogImage,
-	noindex,
-	navigation = 'sticky',
-	footer = 'basic'
-} = Astro.props
+const { title, description, ogImage, noindex, navigation = 'sticky' } = Astro.props
 ---
 
 <!doctype html>
