Removed dark classes

--- a/src/components/ui/Feeds/ExperienceFeed.astro
+++ b/src/components/ui/Feeds/ExperienceFeed.astro
@@ -44,16 +44,16 @@ const { data, classes } = Astro.props
 
 <style>
 	.feed {
-		@apply relative flex flex-col gap-24 pl-6 after:absolute after:bottom-6 after:left-6 after:top-2 after:-translate-x-1/2 after:border after:border-neutral-100 lg:after:left-44 dark:after:border-neutral-800;
+		@apply relative flex flex-col gap-24 pl-6 after:absolute after:bottom-6 after:left-6 after:top-2 after:-translate-x-1/2 after:border after:border-neutral-800 lg:after:left-44;
 	}
 	.feed__item {
 		@apply flex gap-6;
 	}
 	.feed__item-container {
-		@apply relative flex flex-1 flex-col pl-6 before:absolute before:left-0 before:top-2 before:z-10 before:h-4 before:w-4 before:-translate-x-1/2 before:rounded-full before:bg-primary-500 before:ring-2 before:ring-neutral-100 lg:pl-12 dark:before:ring-neutral-800 [&_p]:m-0;
+		@apply relative flex flex-1 flex-col pl-6 before:absolute before:left-0 before:top-2 before:z-10 before:h-4 before:w-4 before:-translate-x-1/2 before:rounded-full before:bg-primary-500 before:ring-2 before:ring-neutral-800 lg:pl-12 [&_p]:m-0;
 	}
 	.feed__item-date_info {
-		@apply hidden font-headings text-lg font-medium text-neutral-800 lg:flex lg:w-32 lg:flex-col lg:gap-2 dark:text-white;
+		@apply hidden font-headings text-lg font-medium text-white lg:flex lg:w-32 lg:flex-col lg:gap-2;
 	}
 	.feed__item-date_info-company,
 	.feed__item-date_info-location {
@@ -66,12 +66,12 @@ const { data, classes } = Astro.props
 		@apply text-neutral-500;
 	}
 	.feed__item-header {
-		@apply text-lg font-medium text-neutral-800 dark:text-white lg:[&_span]:hidden;
+		@apply text-lg font-medium text-white lg:[&_span]:hidden;
 	}
 	.feed__item-text {
 		@apply max-w-5xl;
 	}
 	.feed__item-image {
-		@apply mb-6 overflow-hidden rounded border border-neutral-100 bg-neutral-50 dark:border-neutral-800 dark:bg-neutral-900;
+		@apply mb-6 overflow-hidden rounded border border-neutral-800 bg-neutral-900;
 	}
 </style>
