--- a/src/components/ui/Testimonial.astro
+++ b/src/components/ui/Testimonial.astro
@@ -106,10 +106,10 @@ const {
 		@apply relative z-10;
 	}
 	.testimonial__blockquote {
-		@apply pb-6 font-headings text-xl leading-9 md:text-3xl md:leading-[3.75rem] [&>p]:text-neutral-500 dark:[&>p]:text-neutral-300 [.light_&>p]:text-neutral-500;
+		@apply pb-6 font-headings text-xl leading-9 md:text-3xl md:leading-[3.75rem] [&>p]:text-neutral-300 [.light_&>p]:text-neutral-500;
 	}
 	.testimonial__figcaption {
-		@apply flex flex-col gap-4 text-sm leading-normal text-neutral-700 dark:text-neutral-50 [.light_&]:text-neutral-700;
+		@apply flex flex-col gap-4 text-sm leading-normal text-neutral-50 [.light_&]:text-neutral-700;
 	}
 	.testimonial__figcaption-container {
 		@apply flex items-center gap-4 text-sm;
