--- a/src/components/ui/Pagination.astro
+++ b/src/components/ui/Pagination.astro
@@ -94,16 +94,16 @@ const { first, prev, next, last, current, length, size, total } = Astro.props
 		@apply flex w-full flex-col items-center gap-2 md:flex-row;
 	}
 	.pagination__helper-text {
-		@apply m-0 w-full flex-1 p-0 text-center text-sm font-medium text-neutral-500 md:text-left dark:text-neutral-300;
+		@apply m-0 w-full flex-1 p-0 text-center text-sm font-medium text-neutral-300 md:text-left;
 	}
 	.pagination__list {
-		@apply flex list-none items-center justify-center text-sm text-neutral-700 md:gap-1 dark:text-neutral-50;
+		@apply flex list-none items-center justify-center text-sm text-neutral-50 md:gap-1;
 	}
 	.pagination__nav-arrows {
-		@apply inline-flex h-10 items-center justify-center gap-4 stroke-neutral-700 px-4 text-sm font-medium text-neutral-700 transition duration-300 hover:bg-primary-50 hover:stroke-primary-500 hover:text-primary-500 focus:bg-primary-50 focus:stroke-primary-600 focus:text-primary-600 focus-visible:outline-none dark:text-neutral-50 dark:hover:bg-primary-400/15 dark:hover:text-primary-600;
+		@apply inline-flex h-10 items-center justify-center gap-4 stroke-neutral-700 px-4 text-sm font-medium text-neutral-50 transition duration-300 hover:bg-primary-400/15 hover:stroke-primary-500 hover:text-primary-600 focus:bg-primary-50 focus:stroke-primary-600 focus:text-primary-600 focus-visible:outline-none;
 	}
 	.pagination__item-link {
-		@apply hidden h-10 items-center justify-center gap-4 stroke-neutral-700 px-4 text-sm font-medium text-neutral-700 transition duration-300 hover:bg-primary-50 hover:stroke-primary-500 hover:text-primary-500 focus:bg-primary-50 focus:stroke-primary-600 focus:text-primary-600 focus-visible:outline-none md:inline-flex dark:text-neutral-50 dark:hover:bg-primary-400/15 dark:hover:text-primary-600;
+		@apply hidden h-10 items-center justify-center gap-4 stroke-neutral-700 px-4 text-sm font-medium text-neutral-50 transition duration-300 hover:bg-primary-400/15 hover:stroke-primary-500 hover:text-primary-600 focus:bg-primary-50 focus:stroke-primary-600 focus:text-primary-600 focus-visible:outline-none md:inline-flex;
 	}
 	.pagination__item-link--active {
 		@apply border-b border-primary-600 text-purple-500 hover:border-primary-700 hover:stroke-primary-500 hover:text-primary-600 focus:border-primary-800 focus:text-primary-700;
