--- a/src/components/ui/cards/CaseStudyCard.astro
+++ b/src/components/ui/cards/CaseStudyCard.astro
@@ -46,7 +46,7 @@ const formatRoleName = (role: string): string => {
 
 <Card classes={classes}>
 	{image && <Image src={image} alt={title} width={600} height={400} class="w-full" />}
-	<CardBody classes="!px-0 !pb-4 text-neutral-400 dark:text-neutral-400 text-base">
+	<CardBody classes="!px-0 !pb-4 text-neutral-400 text-base">
 		<h3 class="caseStudy-title">
 			<a href={link}>{title}</a>
 		</h3>
@@ -67,7 +67,7 @@ const formatRoleName = (role: string): string => {
 
 <style>
 	.caseStudy-title {
-		@apply mb-4 text-lg dark:text-white [&_a]:text-inherit;
+		@apply mb-4 text-lg text-white [&_a]:text-inherit;
 	}
 	.caseStudy-roles {
 		@apply flex gap-2 text-sm italic text-neutral-600;
