--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,7 @@ html {
 	@apply scroll-smooth antialiased;
 }
 body {
-	@apply bg-white font-sans text-neutral-500 has-[.header\_\_menu--open]:overflow-hidden lg:has-[.header\_\_menu--open]:overflow-auto dark:bg-[#171717] dark:text-neutral-400 [.dark_&]:text-neutral-400 [.light_&]:text-neutral-500;
+	@apply bg-neutral-950 font-sans text-neutral-400 has-[.header\_\_menu--open]:overflow-hidden lg:has-[.header\_\_menu--open]:overflow-auto;
 }
 
 /* Main typography */
@@ -16,7 +16,7 @@ h3,
 h4,
 h5,
 h6 {
-	@apply font-headings text-neutral-700 last:mb-0 dark:text-neutral-50 [&>strong]:text-primary-500 [.dark_&]:text-neutral-50 [.light_&]:text-neutral-700;
+	@apply font-headings text-neutral-50 last:mb-0 [&>strong]:text-primary-500;
 }
 h1 strong,
 h2 strong,
@@ -65,14 +65,14 @@ main a {
 	@apply text-primary-500 hover:text-primary-600;
 }
 .highlight {
-	@apply text-primary-500 dark:text-primary-500;
+	@apply text-primary-500;
 }
 .small {
-	@apply text-sm font-normal text-neutral-400 dark:text-neutral-500;
+	@apply text-sm font-normal text-neutral-500;
 }
 /* Global basic styling */
 .basic-text {
-	@apply [&_blockquote]:relative [&_blockquote]:mb-6 [&_blockquote]:rounded [&_blockquote]:border [&_blockquote]:border-neutral-100 [&_blockquote]:bg-neutral-50 [&_blockquote]:p-6 [&_blockquote]:text-lg [&_blockquote]:leading-relaxed [&_blockquote]:text-neutral-700 [&_blockquote]:before:absolute [&_blockquote]:before:left-0 [&_blockquote]:before:top-0 [&_blockquote]:before:z-[0] [&_blockquote]:before:block [&_blockquote]:before:text-9xl [&_blockquote]:before:italic [&_blockquote]:before:text-neutral-200 [&_blockquote]:before:opacity-50 [&_blockquote]:before:content-['"'] lg:[&_blockquote]:-mx-12 dark:[&_blockquote]:border-neutral-600 dark:[&_blockquote]:bg-neutral-700 dark:[&_blockquote]:text-neutral-50 dark:[&_blockquote]:before:text-neutral-600 [&_blockquote_p]:relative [&_blockquote_p]:z-[1] [&_blockquote_p]:px-6 [&_h1:not(:first-child)]:mt-24 [&_h2:not(:first-child)]:mt-24 [&_h3:not(:first-child)]:mt-24 [&_h4:not(:first-child)]:mt-12 [&_img]:rounded [&_img]:border [&_img]:border-neutral-100 dark:[&_img]:border-neutral-600 [&_li]:mb-2 [&_li]:ml-4 [&_li]:list-disc [&_li]:marker:text-neutral-600 dark:[&_li]:marker:text-white lg:[&_p:has(img)]:-mx-12 [&_pre]:mb-6 [&_pre]:rounded [&_pre]:border [&_pre]:border-neutral-950 [&_pre]:!bg-neutral-800 [&_pre]:p-6 [&_pre]:text-base [&_pre]:outline-none lg:[&_pre]:-mx-12 [&_pre]:dark:!border-neutral-800 [&_pre]:dark:!bg-neutral-900;
+	@apply [&_blockquote]:relative [&_blockquote]:mb-6 [&_blockquote]:rounded [&_blockquote]:border [&_blockquote]:border-neutral-600 [&_blockquote]:bg-neutral-700 [&_blockquote]:p-6 [&_blockquote]:text-lg [&_blockquote]:leading-relaxed [&_blockquote]:text-neutral-50 [&_blockquote]:before:absolute [&_blockquote]:before:left-0 [&_blockquote]:before:top-0 [&_blockquote]:before:z-[0] [&_blockquote]:before:block [&_blockquote]:before:text-9xl [&_blockquote]:before:italic [&_blockquote]:before:text-neutral-600 [&_blockquote]:before:opacity-50 [&_blockquote]:before:content-['"'] lg:[&_blockquote]:-mx-12 [&_blockquote_p]:relative [&_blockquote_p]:z-[1] [&_blockquote_p]:px-6 [&_h1:not(:first-child)]:mt-24 [&_h2:not(:first-child)]:mt-24 [&_h3:not(:first-child)]:mt-24 [&_h4:not(:first-child)]:mt-12 [&_img]:rounded [&_img]:border [&_img]:border-neutral-600 [&_li]:mb-2 [&_li]:ml-4 [&_li]:list-disc [&_li]:marker:text-white lg:[&_p:has(img)]:-mx-12 [&_pre]:mb-6 [&_pre]:rounded [&_pre]:border [&_pre]:!border-neutral-800 [&_pre]:!bg-neutral-900 [&_pre]:p-6 [&_pre]:text-base [&_pre]:outline-none lg:[&_pre]:-mx-12;
 }
 .basic-text--lg {
 	@apply text-lg leading-relaxed [&_blockquote]:text-xl [&_blockquote]:leading-loose;
