--- a/src/components/ui/Feeds/ExperienceFeed.astro
+++ b/src/components/ui/Feeds/ExperienceFeed.astro
@@ -44,7 +44,7 @@ const { data, classes } = Astro.props
 
 <style>
 	.feed {
-		@apply relative flex flex-col gap-24 pl-6 after:absolute after:bottom-6 after:left-6 after:top-2 after:-translate-x-1/2 after:border after:border-neutral-800 lg:after:left-44;
+		@apply relative flex flex-col gap-24 after:absolute after:bottom-6 after:left-6 after:top-2 after:-translate-x-1/2 after:border after:border-neutral-800 lg:after:left-[9.5rem];
 	}
 	.feed__item {
 		@apply flex gap-6;
