--- a/src/components/ui/cards/CaseStudyCard.astro
+++ b/src/components/ui/cards/CaseStudyCard.astro
@@ -44,8 +44,18 @@ const formatRoleName = (role: string): string => {
 }
 ---
 
-<Card classes={classes}>
-	{image && <Image src={image} alt={title} width={600} height={400} class="w-full" />}
+<Card classes={classes + ' [&_img]:hover:grayscale-0'}>
+	{
+		image && (
+			<Image
+				src={image}
+				alt={title}
+				width={600}
+				height={400}
+				class="w-full grayscale-[0.8] transition-all duration-300"
+			/>
+		)
+	}
 	<CardBody classes="!px-0 !pb-4 text-neutral-400 text-base">
 		<h3 class="caseStudy-title">
 			<a href={link}>{title}</a>
@@ -67,7 +77,7 @@ const formatRoleName = (role: string): string => {
 
 <style>
 	.caseStudy-title {
-		@apply mb-4 text-lg text-white [&_a]:text-inherit;
+		@apply mb-4 text-lg text-white transition-colors duration-300 hover:text-primary-500 [&_a]:text-inherit;
 	}
 	.caseStudy-roles {
 		@apply flex gap-2 text-sm italic text-neutral-600;
