Animated slider lines

--- a/src/styles/swiper.css
+++ b/src/styles/swiper.css
@@ -700,9 +700,9 @@ button.swiper-pagination-bullet {
 }
 
 .custom-pagination-bullet.swiper-pagination-bullet-active {
-	@apply !w-12 text-primary-500 opacity-100;
+	@apply !w-12 text-primary-500 opacity-100 transition-colors duration-300;
 }
 
 .custom-pagination-bullet.swiper-pagination-bullet-active::after {
-	@apply absolute left-4 top-[60%] mx-2 inline-block h-px w-8 translate-y-1/2 bg-primary-500 content-[''] last:hidden;
+	@apply animate-growLine absolute left-4 top-[60%] mx-2 inline-block h-px w-8 origin-left translate-y-1/2 bg-primary-500 content-[''] last:hidden;
 }
