--- a/src/components/ui/Feeds/ExperienceFeed.astro
+++ b/src/components/ui/Feeds/ExperienceFeed.astro
@@ -50,7 +50,7 @@ const { data, classes } = Astro.props
 		@apply flex gap-6;
 	}
 	.feed__item-container {
-		@apply relative flex flex-1 flex-col pl-6 before:absolute before:left-0 before:top-2 before:z-10 before:h-4 before:w-4 before:-translate-x-1/2 before:rounded-full before:bg-primary-500 before:ring-2 before:ring-neutral-800 lg:pl-12 [&_p]:m-0;
+		@apply relative flex flex-1 flex-col pl-6 before:absolute before:-left-2 before:top-2 before:z-10 before:size-4 before:rounded-full before:bg-primary-500 before:ring-2 before:ring-neutral-800 after:absolute after:-left-2 after:top-2 after:size-4 after:rounded-full after:bg-primary-500 after:opacity-80 lg:pl-12 [&_p]:m-0 [.feed\_\_item:hover_&:after]:animate-ping;
 	}
 	.feed__item-date_info {
 		@apply hidden font-headings text-lg font-medium text-white lg:flex lg:w-32 lg:flex-col lg:gap-2;
