Updated case study cards

--- a/src/components/blocks/caseStudies/CaseStudiesHomeSection.astro
+++ b/src/components/blocks/caseStudies/CaseStudiesHomeSection.astro
@@ -53,6 +53,7 @@ const sortedCaseStudies = allCaseStudies.sort((a: any, b: any) => {
 								link={`/case-studies/${caseStudy.id}`}
 								title={caseStudy.data.title}
 								image={caseStudy.data.cardImage}
+								greyImage={caseStudy.data.greyImage}
 								roles={caseStudy.data.roles}
 							>
 								{caseStudy.data.description}
