--- a/src/components/blocks/hero/HomeCTA.astro
+++ b/src/components/blocks/hero/HomeCTA.astro
@@ -34,7 +34,7 @@ import heroImage from '../../../assets/hero-image.png'
 				</h1>
 
 				<p
-					class="flex flex-row flex-wrap gap-6 font-headings text-neutral-300 transition-colors duration-300 lg:flex-nowrap [&_a]:text-neutral-300"
+					class="flex flex-row flex-wrap gap-6 font-headings text-neutral-300 lg:flex-nowrap [&_a]:text-neutral-300 [&_a]:transition-colors [&_a]:duration-300"
 				>
 					<a href="mailto:milo@studio.com">milo@studio.com</a>
 					<a href="tel:+13235550198">+1 (323) 555-0198</a>
