--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,13 +3,13 @@ html {
 	@apply scroll-smooth antialiased;
 }
 body {
+	--gradient-stop: 15%;
 	@apply font-sans text-neutral-400 has-[.header\_\_menu--open]:overflow-hidden lg:has-[.header\_\_menu--open]:overflow-auto;
-
 	background:
 		radial-gradient(
 			circle at 50% 100%,
 			theme('colors.primary.950') 0%,
-			theme('colors.neutral.950') 10%
+			theme('colors.neutral.950') var(--gradient-stop)
 		),
 		theme('colors.neutral.950');
 }
